[project]
name = "earlymed"
version = "0.0.1"
description = "earlymed - machine learning supporting visualization library in Python."
readme = "README.md"
keywords = [
  "data-science",
  "classification",
  "machine-learning",
  "regression",
  "visualization"
]
license = { file = "LICENSE" }
maintainers = [
  { name = "earlymed developers" },
]
authors = [
    { name = "earlymed developers" },
]
requires-python = ">=3.9,<3.13"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
]
# core dependencies of pycaret
# this set should be kept minimal!
dependencies = [
  # Base
  "ipython>=5.5.0",
  "ipywidgets>=7.6.5",
  "tqdm>=4.62.0",
  "numpy>=1.21, <1.27",
  "pandas<2.2",
  "scipy>=1.6.1,<=1.11.4",
  "joblib>=1.4.2,<1.5",
  "scikit-learn<1.5",
  "skforecast",
  "setuptools; python_version>='3.12'",
  # Plotting
  "matplotlib<3.8.0",
  "kneed",
  "seaborn",
]

[project.urls]
"Release Notes" = "https://github.com/Mb-NextTime/early-med/releases"
Repository = "https://github.com/Mb-NextTime/early-med"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>61",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]